[WebView] WebView can't display social network icons on wellsfargo.com

XMLWordPrintable

    • web

        Reproducible: always
        Platform-specific: no
        Regression: yes (works fine in 8u101)
        Steps to reproduce: open https://wellsfargo.com in WebView and scroll to the bottom
        Expected: gray icons of some social networks dispalyed
        Actual result: blank row.

        Images are loaded as svg/base64, so JDK-8160769 is probably related to current issue.

          1. svg-background-image.html
            0.4 kB
          2. 8162949.png
            8162949.png
            75 kB
          3. 8162949_1.png
            8162949_1.png
            80 kB

              Assignee:
              Arunprasad Rajkumar
              Reporter:
              Andrey Rusakov (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

                Created:
                Updated:
                Resolved: