8162949: [WebView] WebView can't display social network icons on wellsfargo.com